chore: update assertions in RideRequestDriverAttemptServiceImplIntegrationTest and refactor stream collection in RidersSearchServiceImpl